; ModuleID = '/home/carl/AnghaBench/zfs/module/os/linux/zfs/extr_arc_os.c_arc_available_memory.c'
source_filename = "/home/carl/AnghaBench/zfs/module/os/linux/zfs/extr_arc_os.c_arc_available_memory.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@INT64_MAX = common dso_local global i32 0, align 4
@FMR_UNKNOWN = common dso_local global i32 0, align 4
@last_free_memory = common dso_local global i32 0, align 4
@last_free_reason = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @arc_available_memory() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = load i32, i32* @INT64_MAX, align 4
  store i32 %3, i32* %1, align 4
  %4 = load i32, i32* @FMR_UNKNOWN, align 4
  store i32 %4, i32* %2, align 4
  %5 = call i64 @spa_get_random(i32 100)
  %6 = icmp eq i64 %5, 0
  br i1 %6, label %7, label %8

7:                                                ; preds = %0
  store i32 -1024, i32* %1, align 4
  br label %8

8:                                                ; preds = %7, %0
  %9 = load i32, i32* %1, align 4
  store i32 %9, i32* @last_free_memory, align 4
  %10 = load i32, i32* %2, align 4
  store i32 %10, i32* @last_free_reason, align 4
  %11 = load i32, i32* %1, align 4
  ret i32 %11
}

declare dso_local i64 @spa_get_random(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
